--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "preact-starter",
+  "name": "frontend-applications",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
