--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "preact": "^8.5.2",
     "preact-compat": "^3.17.0",
     "preact-render-to-string": "^4.1.0",
-    "preact-router": "^2.5.7"
+    "preact-router": "^2.5.7",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4"
   },
   "jest": {
     "preset": "jest-preset-preact"
