--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "preact-redux": "^2.1.0",
     "preact-render-to-string": "^4.1.0",
     "preact-router": "^2.5.7",
+    "preact-router-redux": "^4.1.0",
     "redux": "^4.0.4"
   },
   "jest": {
